--- a/cardistry.html
+++ b/cardistry.html
@@ -30,9 +30,9 @@
       <nav>
         <ul>
           <li><a href="/index.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="/Eric%20Yufeng%20Wu%20Resume.pdf" target="blank">Resume</a></li>
           <li><a href="../projects/projects.html">Projects</a></li>
-          <li><a href="/research/research.html">Research</a></li>
+          <!--<li><a href="/research/research.html">Research</a></li>-->
           <li><a href="/art/art.html">Art &amp; Design</a></li>
           <li class="current"><a href="/cardistry.html">Cardistry</a></li>
         </ul>
@@ -40,6 +40,24 @@
     </div>
   </header>
   
+	
+	<div class="container">
+		<br>
+		<h2 class="centered">My Cardistry Videos</h2>
+		<p class="light" style="text-align:center">For more cardistry videos, please consider subscribing to my Youtube channel!</p>
+		<br>
+		<div class="container">
+			<h3>Yangshuo, China</h3>
+			<p class="date" style="text-align:left">July 2019</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/okp_j9rGrBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+		<br>
+		<div class="container">
+			<h3>Dreamer</h3>
+			<p class="date" style="text-align:left">June 2018</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/DcXhDk1m30M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+	</div>
   
   
   <footer>
