--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav>
         <ul>
           <li class="current"><a href="index.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="/Eric%20Yufeng%20Wu%20Resume.pdf" target="blank">Resume</a></li>
           <li><a href="./projects/projects.html">Projects</a></li>
           <!-- <li><a href="./research/research.html">Research</a></li> -->
           <li><a href="./art/art.html">Art &amp; Design</a></li>
@@ -88,16 +88,16 @@
           <p class="showcasetext">With a professor in Tufts Sculpture department, I built a delta-style 3D-printer dedicated for ceramics (clay) printing. We adopted a design online and built our own version with improvements.&nbsp<a class="showcaselink" href="/projects/engineering_ceramics_printer.html">Learn more</a></p>
         </div>
       </div> 
-
+<!--
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
-        <a href="/research/research.html"><img src="./documents/about/Featuring_4.jpg" style="width:100%"></a>
+        <a href=""><img src="./documents/about/Featuring_4.jpg" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Fluidic Control Board for Soft Robotics</h1>
-          <p class="showcasetext">I built a control board with a solenoid valve manifold and power MOSFETS. The board is used in my lab to study and test out inflatable soft robotics actuators.&nbsp<a class="showcaselink" href="/research/research.html">Learn more</a></p>
+          <p class="showcasetext">I built a control board with a solenoid valve manifold and power MOSFETS. The board is used in my lab to study and test out inflatable soft robotics actuators.&nbsp<a class="showcaselink" href="">Learn more</a></p>
         </div>
       </div> 
-
+-->
       <div class="mySlides">
         <div class="numbertext">5 / 6</div>
         <a href="/projects/engineering_the_mighty_board.html"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
@@ -131,14 +131,16 @@
         <div class="column">
           <img class="demo cursor" src="./documents/about/Featuring_3.jpeg" style="width:100%" onclick="currentSlide(3)" alt="Featuring_3">
         </div>
+				<!--
         <div class="column">
           <img class="demo cursor" src="./documents/about/Featuring_4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Featuring_4">
         </div>
+				-->
         <div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_5.JPEG" style="width:100%" onclick="currentSlide(5)" alt="Featuring_5">
+          <img class="demo cursor" src="./documents/about/Featuring_5.JPEG" style="width:100%" onclick="currentSlide(4)" alt="Featuring_5">
         </div>
         <div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Featuring_6">
+          <img class="demo cursor" src="./documents/about/Featuring_6.jpg" style="width:100%" onclick="currentSlide(5)" alt="Featuring_6">
         </div>
       </div>
       
