--- a/projects/lego_backpacks.html
+++ b/projects/lego_backpacks.html
@@ -32,7 +32,7 @@
       <nav>
         <ul>
           <li><a href="../index.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="/Eric%20Yufeng%20Wu%20Resume.pdf" target="blank">Resume</a></li>
           <li class="current"><a href="../projects/projects.html">Projects</a></li>
           <!-- <li><a href="../research/research.html">Research</a></li> -->
           <li><a href="../art/art.html">Art &amp; Design</a></li>
