--- a/projects/hexapod_h2.html
+++ b/projects/hexapod_h2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Yufeng (Eric) Wu | Welcome</title>
+  <title>Yufeng (Eric) Wu | Projects</title>
   <meta charset="utf-8">
   <meta name="author" content="Yufeng (Eric) Wu">
   <meta name = "viewport" content="width=device-width">
@@ -10,6 +10,8 @@
   <meta name="keywords" content="portfolio, mechanical engineering">
   <link rel="stylesheet" type="text/css" href="../css/default_style.css">
   <link rel="stylesheet" type="text/css" href="../css/projectprofile.css">
+	<!--<link rel="stylesheet" type="text/css" href="../css/showcase.css">-->
+	<link rel="stylesheet" type="text/css" href="../css/lightbox.css">
 </head>
     
 <body>
@@ -17,33 +19,190 @@
     <div class="container">
       <div id="branding">
         <h1>Yufeng (Eric) Wu</h1>
+				<div id="topicons">
+					<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="/documents/icons/Instagram.png"></a>
+					<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="/documents/icons/Youtube.png"></a>
+					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
+					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
+					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				</div>
       </div>
+		</div>
+		<div class="container">	
       <nav>
         <ul>
           <li><a href="../index.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
-          <li class="current"><a href="projects.html">Projects</a></li>
-          <li><a href="../research/research.html">Research</a></li>
+          <li><a href="/Eric%20Yufeng%20Wu%20Resume.pdf" target="blank">Resume</a></li>
+          <li class="current"><a href="./projects/projects.html">Projects</a></li>
+          <!-- <li><a href="../research/research.html">Research</a></li> -->
           <li><a href="../art/art.html">Art &amp; Design</a></li>
           <li><a href="../cardistry.html">Cardistry</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  
+	
+	
+  <section id="showcase">
+		<div class="container">
+			<br>
+			<div class="prev_button">
+				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+			</div>
+			<div class="next_button">
+				<a class="next_page" href="hexapod_h1.html"><p>Next: H1 &gt;&gt;</p></a>
+			</div>
+		</div>
+		
+	
+		<div class="container">
+			<h2 class="centered">Hexapod H2</h2>
+			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
+			<p class="date">July 2019 - August 2019</p>
+			<p class="main_content">This is version H2 of my open-source hexapod series - and the 4<sup>th</sup> one I've built. For more details on how I started all this and, go to the <a href="/projects/hexapod_prototypes.html" >prototypes</a> page.</p>
+			<p class="main_content">One of the biggest improvents I made on H2 compared to <a href="/projects/hexapod_h1.html" >Version H1</a> is that I designed a hexagon-shape PCB that consists a servo driver (based on Adafruit's PCA9685 driver), power switches, battery ports, and pin headers to connect to the Feather Hazzah. </p>
+				<div class="row_lightbox">
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/compare_0.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/detail_0.JPEG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+					</div>
+				</div>
+				<p class="img_caption">H1 Versus H2</p>
+				<br>
+		</div>	
+			
+		<div class = "container">
+			<p class="main_content">In the new PCB, I re-arranged the servo pins and distributed them downwards at the six corners of the board, so that the servos can be directly attached to the driver board without going into the structure and come out at the top - bringing the wire management system significantly cleaner. </p>
+			<p class="main_content">Freeing the top of the robot from tangling wires, I designed an extension-ready cover for H2. If later I or anyone else would like to add extra functions to the robot, we can simply design more PCBs to stack on top, and use the holes to mount other hardware components: </p>
+			<!-- Image Gallery -->	
+				<div class="row_lightbox">
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/detail_1.JPEG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/detail_2.JPEG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/detail_3.JPEG" onclick="openModal();currentSlide(5)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/detail_4.JPEG" onclick="openModal();currentSlide(6)" class="hover-shadow">
+					</div>
+				</div>
+				<p class="img_caption">Complete Version. 08-28-2019</p>
+				<br>	
+		</div>
+
+	
+		<div class="container">
+			<h3>Building Process</h3>
+			<p>I adapted the design from the <a href="https://www.adafruit.com/product/815" target="_blank">PCA9685 servo driver</a> from Adafruit. I replaced all the surface mount parts (except the PCA9685 chip) to through-hole components, and sent the PCB files to a website to get it manufactured. I then later soldered the SMD chip to the board using a microscope.</p>
+			<!-- Image Gallery -->	
+				<div class="row_lightbox">
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/pcb_1.JPG" onclick="openModal();currentSlide(7)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/pcb_2.JPEG" onclick="openModal();currentSlide(8)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/pcb_3.JPEG" onclick="openModal();currentSlide(9)" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/pcb_4.JPEG" onclick="openModal();currentSlide(10)" class="hover-shadow">
+					</div>
+				</div>
+			<p>I did not make too many changes on the 3D printed parts. Here's a sketch demonstrating the wire management ideas I have.</p>
+			<div class="single"><img src="/documents/projects/hexapod_h2/IMG_0172.PNG" onclick="openModal();currentSlide(11)" class="hover-shadow"></div>
+			<br>
+		</div>
 
 
-  
-  
+		
+		
+		
+		<div class="container">
+			<h3>Time to Dance!</h3>
+			<div class="row_lightbox">
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/pos.gif" onclick="" class="hover-shadow">
+					</div>
+					<div class="column_lightbox">
+						<img src="/documents/projects/hexapod_h2/dance.gif" onclick="" class="hover-shadow">
+					</div>
+			</div>
+			<br>
+		</div>
+		
+		
+		
+		<div class="container">
+			<br>
+			<div class="prev_button">
+				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+			</div>
+			<div class="next_button">
+				<a class="next_page" href="hexapod_h1.html"><p>Next: H1 &gt;&gt;</p></a>
+			</div>
+		</div>
+		
+  </section>
+	
+	
+	
+	<!-- The Modal/Lightbox -->
+			<div id="myModal" class="modal">
+				<span class="close cursor" onclick="closeModal()">&times;</span>
+				<div class="modal-content">
+
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
+					</div>			
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
+					</div>				
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+					</div>
+					<!-- Next/previous controls -->
+					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+					<a class="next" onclick="plusSlides(1)">&#10095;</a>
+					<!-- Caption text -->
+					<div class="caption-container">
+						<p id="caption"></p>
+					</div>
+				</div>
+			</div>
+	
   
   <footer>
     <div class="container">
       <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
+			<div id="icons">
+				<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="/documents/icons/Instagram.png"></a>
+				<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="/documents/icons/Youtube.png"></a>
+				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
+				<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
+				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+			</div>
     </div>
   </footer>
   
   
   <script type="text/javascript" src="../javascript/project.js"></script>
+	<script type="text/javascript" src="../javascript/content_slideshow.js"></script>
+	<script type="text/javascript" src="../javascript/lightbox.js"></script>
   
 </body>
     
