--- a/projects/hexapod_h2.html
+++ b/projects/hexapod_h2.html
@@ -59,7 +59,7 @@
 			<h2 class="centered">Hexapod H2</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">July 2019 - August 2019</p>
-			<p class="main_content">This is version H2 of my open-source hexapod series - and the 4<sup>th</sup> one I've built. For more details on how I started all this and, go to the <a href="/projects/hexapod_prototypes.html" >prototypes</a> page.</p>
+			<p class="main_content">This is version H2 of my open-source hexapod series - and the 4<sup>th</sup> one I've built overall. For more details on how I started all this and, go to the <a href="/projects/hexapod_prototypes.html" >prototypes</a> page.</p>
 			<p class="main_content">One of the biggest improvents I made on H2 compared to <a href="/projects/hexapod_h1.html" >Version H1</a> is that I designed a hexagon-shape PCB that consists a servo driver (based on Adafruit's PCA9685 driver), power switches, battery ports, and pin headers to connect to the Feather Hazzah. </p>
 				<div class="row_lightbox">
 					<div class="column_lightbox">
@@ -158,23 +158,40 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/projects/hexapod_h2/compare_0.JPEG">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/projects/hexapod_h2/detail_0.JPEG">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/projects/hexapod_h2/detail_1.JPEG">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/projects/hexapod_h2/detail_2.JPEG">
 					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/detail_3.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/detail_4.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/pcb_1.JPG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/pcb_2.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/pcb_3.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/pcb_4.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_h2/IMG_0172.PNG">
+					</div>
+					
+					
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
