--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
   <!-- Intro -->
   <section id="introduction">
     <div class="container">
+			<p class="light"><b>Note:</b> As I am still in the process of moving my previous documentations from my old website to here, some pages might still appear blank or broken. If this is the case, please visit <a href="http://yufengericwu.myportfolio.com" target="_blank">http://yufengericwu.myportfolio.com</a> for all my previous projects (prior to March 2019). I apologize for the inconvenience!</p>
+
       <p id="intro"><img id="profilepic" src="./documents/about/profilepic.jpg" alt="what I look like">Hi! My name is Yufeng (Eric) Wu, and I am currently a Junior at Tufts University at Medford, MA. I am studying in mechanical engineering with a minor in studio art. <br>
       This website contains several sections that collectively define who I am. It is still under construction, as I am still refining some documentations of my previous and current projects. If you have any further questions, please feel free to contact me at: <br>yufeng.wu@tufts.edu or 857-869-3542.</p>
+			
 
     </div>
   </section>
