--- a/projects/hexapod_h2.html
+++ b/projects/hexapod_h2.html
@@ -50,7 +50,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="hexapod_h1.html"><p>Next: H1 &gt;&gt;</p></a>
+				<a class="next_page" href="hexapod_h1mini.html"><p>Next: H1 Mini &gt;&gt;</p></a>
 			</div>
 		</div>
 		
@@ -144,7 +144,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="hexapod_h1.html"><p>Next: H1 &gt;&gt;</p></a>
+				<a class="next_page" href="hexapod_h1mini.html"><p>Next: H1 Mini &gt;&gt;</p></a>
 			</div>
 		</div>
 		
