--- a/cardistry.html
+++ b/cardistry.html
@@ -55,7 +55,7 @@
 		<div class="container">
 			<h3>Dreamer</h3>
 			<p class="date" style="text-align:left">June 2018</p>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/DcXhDk1m30M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DcXhDk1m30M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
   
