--- a/projects/engineering_iot_arms.html
+++ b/projects/engineering_iot_arms.html
@@ -47,80 +47,77 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+				<a class="prev_page" href="engineering_the_mighty_board.html"><p>&lt;&lt; Prev: The Mighty Board</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href=""><p>Next: &gt;&gt;</p></a>
+				<a class="next_page" href="engineering_robot_head.html"><p>Next: UR5 Arm System Head &gt;&gt;</p></a>
 			</div>
 		</div>
 		
 	
 		<div class="container">
-			<h2 class="centered">Title of Page</h2>
+			<h2 class="centered">MakeHarvard Dum-E IoT</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
-			<!--<p class="date">March 2019 - May 2019</p>-->
-			<p class="main_content">Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem. <a href="" target="_blank">link</a></p>
+			<p class="date">Febuary 2019</p>
+			<p class="main_content">This was originally a make-athon project during the MakeHarvard Competition in Feburary 2019 by myself ad 3 other team members. The cover image is an improved design made after the competition, which is shown towards the end of the page.</p>
 		</div>
 
 	
 		<div class="container">
-			<h3>Latest Update</h3>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-		</div>
-	
-
-	
- 		<!-- Image Gallery -->
-		<div class="container">		
-			<!-- Images used to open the lightbox -->
+			<h3>Version 1</h3>
+			<p class="main_content">During the competition, we made 3 robot arms (or more!) that are controlled by the Internet of Things. Everything about it, from ideation to the final product, were created within 24 hours of the competition. The idea behind this project is to create an easy-to-remake robot arm that can be used as a teaching tool for robotics, the Internet of Things, etc.</p>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/engineering_iot_arms/v1_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+					<img src="/documents/projects/engineering_iot_arms/v1_2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG" onclick="openModal();currentSlide(3)" class="hover-shadow">
-				</div>
-				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+					<img src="/documents/projects/engineering_iot_arms/v1_3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
 				</div>
 			</div>
-
-			<p class="img_caption">Gallery Title. 09-10-2019</p>
+			<p class="main_content">Specifically, I designed and fabricated the main arm structure, while making sure the mechanism integrates well with the gripper and the rotating base (designed by two other team members). I also made a video that captures the experience during the competition.</p>
+			<div class="container">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/RKkWWxAW4VI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 			<br>
-		</div>	
-
+		</div>
 
 		
 		
 		<div class="container">
-			<h3>1. Stage</h3>
-			<p class = "light">July 22nd - Mid August</p>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG" onclick="openModal();currentSlide(5)" class="hover-shadow"></div>
-			<p class="img_caption">Building in progress.</p>
+			<h3>Version 2</h3>
+			<p class = "light">March 2019</p>
+			<p class="main_content">The first version were created under limited time and materials. As of now, I am currently working on re-designing the main arm structure to make it easier to assemble, more structurally sound, and more aesthetically pleasing.
+			<p class="main_content">I added standoffs to increase the stability and replaced the middle servo with a bigger one with more torque. I also deep-engraved some parts in the acrylic to create counter-sink holes, to attach to the servo, and to hold nuts in place.</p>
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_iot_arms/v2_1.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_iot_arms/v2_2.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_iot_arms/v2_3.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_iot_arms/v2_4.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
+				</div>
+			</div>
 			<br>
 		</div>
 		
-		<div class="container">
-			<h3>2. Stage</h3>
-			<p class = "light">Mid August - September 10</p>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg" onclick="openModal();currentSlide(6)" class="hover-shadow"></div>
-			<p class="img_caption">Printer firmware configuration (Marlin).</p>
-		</div>
+	
 		
-		
-		
+		<section id="showcase">
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+				<a class="prev_page" href="engineering_the_mighty_board.html"><p>&lt;&lt; Prev: The Mighty Board</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next:&gt;&gt;</p></a>
+				<a class="next_page" href="engineering_robot_head.html"><p>Next: UR5 Arm System Head &gt;&gt;</p></a>
 			</div>
 		</div>
 		
@@ -134,23 +131,27 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/projects/engineering_iot_arms/v1_1.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/projects/engineering_iot_arms/v1_2.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/projects/engineering_iot_arms/v1_3.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/projects/engineering_iot_arms/v2_1.jpg">
 					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_iot_arms/v2_2.jpg">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_iot_arms/v2_3.jpg">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_iot_arms/v2_4.jpg">
+					</div>
+					
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
