--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -56,61 +56,31 @@
 		
 	
 		<div class="container">
-			<h2 class="centered">Title of Page</h2>
+			<h2 class="centered">2019 Trinity Firefighter Robot</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
-			<!--<p class="date">March 2019 - May 2019</p>-->
-			<p class="main_content">Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem. <a href="" target="_blank">link</a></p>
-		</div>
-
-	
-		<div class="container">
-			<h3>Latest Update</h3>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-		</div>
-	
-
-	
- 		<!-- Image Gallery -->
-		<div class="container">		
-			<!-- Images used to open the lightbox -->
+			<p class="date">April 2019</p>
+			<p class="main_content">In April 2019, As a member of Tufts Robotics Club, I participated in the Trinity International Robot Contest, where we built a fully autonomous robot that navigates in a maze, identifies the location of fire (symbolized by a candle), and blows it out. The robot uses a Rplidar to create a map of the maze, and fire sensors to identify the location of the flame. </p>
+			
+			<div class="single"><img src="/documents/projects/robotics_trinity_2019/render_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow"></div>
+			<p class="img_caption">Add caption here?</p>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/robotics_trinity_2019/detail_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+					<img src="/documents/projects/robotics_trinity_2019/detail_2.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+					<img src="/documents/projects/robotics_trinity_2019/detail_3.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+					<img src="/documents/projects/robotics_trinity_2019/detail_4.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 			</div>
-
-			<p class="img_caption">Gallery Title. 09-10-2019</p>
-			<br>
-		</div>	
-
-
-		
-		
-		<div class="container">
-			<h3>1. Stage</h3>
-			<p class = "light">July 22nd - Mid August</p>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG" onclick="openModal();currentSlide(5)" class="hover-shadow"></div>
-			<p class="img_caption">Building in progress.</p>
-			<br>
+			<p class="main_content">I designed the base layer of the robot, which hosts a raspberry pi, an Arduino Mega, all the batteries, and the motors. I used stand-offs and zip ties to secure all the components from shifting during the robot's movement. </p>
+			
 		</div>
-		
-		<div class="container">
-			<h3>2. Stage</h3>
-			<p class = "light">Mid August - September 10</p>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg" onclick="openModal();currentSlide(6)" class="hover-shadow"></div>
-			<p class="img_caption">Printer firmware configuration (Marlin).</p>
-		</div>
+
 		
 		
 		
