--- a/projects/lego_backpacks.html
+++ b/projects/lego_backpacks.html
@@ -50,7 +50,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href=""><p>Next: LEGO Pully Learning Kit &gt;&gt;</p></a>
+				<a class="next_page" href="lego_pulley.html"><p>Next: LEGO Pully Learning Kit &gt;&gt;</p></a>
 			</div>
 		</div>
 		
@@ -182,7 +182,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href=""><p>Next: LEGO Pully Learning Kit &gt;&gt;</p></a>
+				<a class="next_page" href="lego_pulley.html"><p>Next: LEGO Pully Learning Kit &gt;&gt;</p></a>
 			</div>
 		</div>
 		
