--- a/projects/projects.html
+++ b/projects/projects.html
@@ -193,7 +193,7 @@
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="lego_pully.html"><img src="../documents/projects/thumbnails/lego_pully.jpg" alt="LEGO Pully" class="thumbnail"></a>
+						<a href="lego_pulley.html"><img src="../documents/projects/thumbnails/lego_pully.jpg" alt="LEGO Pulley" class="thumbnail"></a>
             <div class="title">
                 <p><a href="lego_pully.html">LEGO Pully Learning Kit</a></p>
             </div>
