--- a/projects/engineering_robot_head.html
+++ b/projects/engineering_robot_head.html
@@ -47,80 +47,33 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+				<a class="prev_page" href="engineering_iot_arms.html"><p>&lt;&lt; Prev: 2019 Dum-E IoT</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href=""><p>Next: &gt;&gt;</p></a>
+				<a class="next_page" href=""><p>Next:&gt;&gt;</p></a>
 			</div>
 		</div>
 		
 	
 		<div class="container">
-			<h2 class="centered">Title of Page</h2>
+			<h2 class="centered">UR5 Arm System Head</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<!--<p class="date">March 2019 - May 2019</p>-->
-			<p class="main_content">Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem. <a href="" target="_blank">link</a></p>
+			<p class="main_content"><a href="https://yufengericwu.myportfolio.com/robot-head" target="_blank">https://yufengericwu.myportfolio.com/robot-head</a></p>
 		</div>
 
 	
-		<div class="container">
-			<h3>Latest Update</h3>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-		</div>
-	
-
-	
- 		<!-- Image Gallery -->
-		<div class="container">		
-			<!-- Images used to open the lightbox -->
-			<div class="row_lightbox">
-				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
-				</div>
-				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG" onclick="openModal();currentSlide(2)" class="hover-shadow">
-				</div>
-				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG" onclick="openModal();currentSlide(3)" class="hover-shadow">
-				</div>
-				<div class="column_lightbox">
-					<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG" onclick="openModal();currentSlide(4)" class="hover-shadow">
-				</div>
-			</div>
-
-			<p class="img_caption">Gallery Title. 09-10-2019</p>
-			<br>
-		</div>	
-
-
 		
-		
-		<div class="container">
-			<h3>1. Stage</h3>
-			<p class = "light">July 22nd - Mid August</p>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG" onclick="openModal();currentSlide(5)" class="hover-shadow"></div>
-			<p class="img_caption">Building in progress.</p>
-			<br>
-		</div>
-		
-		<div class="container">
-			<h3>2. Stage</h3>
-			<p class = "light">Mid August - September 10</p>
-			<p>Village did removed enjoyed explain nor ham saw calling talking. Securing as informed declared or margaret. Joy horrible moreover man feelings own shy. Request norland neither mistake for yet. Between the for morning assured country believe. On even feet time have an no at. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-			<div class="single"><img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg" onclick="openModal();currentSlide(6)" class="hover-shadow"></div>
-			<p class="img_caption">Printer firmware configuration (Marlin).</p>
-		</div>
 		
 		
 		
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+				<a class="prev_page" href="engineering_iot_arms.html"><p>&lt;&lt; Prev: 2019 Dum-E IoT</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next:&gt;&gt;</p></a>
+				<a class="next_page" href=""><p>Next:&gt;&gt;</p></a>
 			</div>
 		</div>
 		
