--- a/projects/robotics_trinity_2019.html
+++ b/projects/robotics_trinity_2019.html
@@ -50,7 +50,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href=""><p>Next: Pacbot 2019&gt;&gt;</p></a>
+				<a class="next_page" href="robotics_pacbot_2019.html"><p>Next: Pacbot 2019 &gt;&gt;</p></a>
 			</div>
 		</div>
 		
@@ -59,7 +59,7 @@
 			<h2 class="centered">2019 Trinity Firefighter Robot</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">April 2019</p>
-			<p class="main_content">In April 2019, As a member of Tufts Robotics Club, I participated in the Trinity International Robot Contest, where we built a fully autonomous robot that navigates in a maze, identifies the location of fire (symbolized by a candle), and blows it out. The robot uses a Rplidar to create a map of the maze, and fire sensors to identify the location of the flame. </p>
+			<p class="main_content">In April 2019, as a member of Tufts Robotics Club, I participated in the Trinity International Robot Contest, where we built a fully autonomous robot that navigates in a maze, identifies the location of fire (symbolized by a candle), and blows it out. The robot uses a Rplidar to create a map of the maze, and fire sensors to identify the location of the flame. </p>
 			<p class="main_content">I lead group of 2 members and came up with a design that we believe can be customized and re-used in the future competitions. The idea is to have multiple layers of the robot designed individually, with universal connection method made possible by MakerBeams. As the hardware team lead, I first spent time with the team and decided on the specific parameters of the connecting method, and we broke into sub-groups to speed up the design process; after that, I gathered all the design, combined them into a big assembly, and fabricated the whole structure with the team. It took a couple of iterations for each part of the components before we settled for the final robot, but the modular nature of the system really helped speed up the prototyping process.</p>
 			<p class="main_content">Shown below is the complete Solidworks assembly (we designed all the components except the motor, the Raspberry Pi, the lidar, and the Arduino, which we obtained from GrabCAD).</p>
 			<div class="single"><img src="/documents/projects/robotics_trinity_2019/render_1.jpg" onclick="openModal(1);currentSlide(1)" class="hover-shadow"></div>
@@ -113,7 +113,7 @@
 				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="engineering_the_mighty_board.html"><p>Next: Pacbot2019 &gt;&gt;</p></a>
+				<a class="next_page" href="robotics_pacbot_2019.html"><p>Next: Pacbot 2019 &gt;&gt;</p></a>
 			</div>
 		</div>
 		
