--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -59,10 +59,13 @@
 			<h2 class="centered">2019 Trinity Firefighter Robot</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">April 2019</p>
-			<p class="main_content">In April 2019, As a member of Tufts Robotics Club, I participated in the Trinity International Robot Contest, where we built a fully autonomous robot that navigates in a maze, identifies the location of fire (symbolized by a candle), and blows it out. The robot uses a Rplidar to create a map of the maze, and fire sensors to identify the location of the flame. </p>
+			<p class="main_content">In April 2019, As a member of Tufts Robotics Club, I participated in the Trinity International Robot Contest, where we built a fully autonomous robot that navigates in a maze, identifies the location of fire (symbolized by a candle), and blows it out. The robot uses a Rplidar to create a map of the maze, and fire sensors to identify the location of the flame. <a href="" target="_blank">Link</a></p>
 			
 			<div class="single"><img src="/documents/projects/robotics_trinity_2019/render_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow"></div>
 			<p class="img_caption">Add caption here?</p>
+			
+			<br>
+			<h3>Building Process</h3>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
 					<img src="/documents/projects/robotics_trinity_2019/detail_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
