--- a/cardistry.html
+++ b/cardistry.html
@@ -45,16 +45,19 @@
 		<br>
 		<h2 class="centered">My Cardistry Videos</h2>
 		<p class="light" style="text-align:center">For more cardistry videos, please consider subscribing to my Youtube channel!</p>
+
+		<p class="main_content">Cardistry is the performing art of shuffling and manipulating cards in a fancy way (and yes, although Chrome and Microsoft Office still think it's spelling error, it is an actual word). From Youtube to Instagram, cardists from around the world amaze us with their endless variations with flourishes – all done with a simple, easily accessible deck of playing cards. </p>
+		<p class="main_content">I have been practicing Cardistry for 4 years. It has been my go-to stress relief method and an integral part of who I am. In Spring 2020, I will be teaching Cardistry as a college-level class through the <a href="https://excollege.tufts.edu/teach/peer" target="_blank" >Experimental College Peer Teaching Program</a> at Tufts.  </p>
 		<br>
 		<div class="container">
-			<h3>Yangshuo, China</h3>
-			<p class="date" style="text-align:left">July 2019</p>
+			<h3 style="text-align:center">Yangshuo, China</h3>
+			<p class="date" style="text-align:center">July 2019</p>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/okp_j9rGrBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 		<br>
 		<div class="container">
-			<h3>Dreamer</h3>
-			<p class="date" style="text-align:left">June 2018</p>
+			<h3 style="text-align:center">Dreamer</h3>
+			<p class="date" style="text-align:center">June 2018</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DcXhDk1m30M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
