--- a/projects/me84_hw7.html
+++ b/projects/me84_hw7.html
@@ -13,6 +13,7 @@
 	<!--<link rel="stylesheet" type="text/css" href="../css/showcase.css">-->
 	<link rel="stylesheet" type="text/css" href="../css/lightbox.css">
 </head>
+	
     
 <body>
   <header>
@@ -56,7 +57,7 @@
 		
 	
 		<div class="container">
-			<h2 class="centered">HW 7 Abstract Coconut</h2>
+			<h2 class="centered">HW 7 - Abstract Coconut</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">April 2019</p>
 			<p class="main_content">This is a weather station that pulls data from a weather website and displays temperature, humidity, wind speed, and precipitation in 4 different dials. After finishing the project we noticed the combination of plywood and white acrylic makes it look like a coconut - more or less. Therefore we decided to name it Abstract Coconut. <a href="" target="_blank">Link</a></p>
