--- a/projects/me84_hw2.html
+++ b/projects/me84_hw2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Yufeng (Eric) Wu | Welcome</title>
+  <title>Yufeng (Eric) Wu | Projects</title>
   <meta charset="utf-8">
   <meta name="author" content="Yufeng (Eric) Wu">
   <meta name = "viewport" content="width=device-width">
@@ -10,6 +10,8 @@
   <meta name="keywords" content="portfolio, mechanical engineering">
   <link rel="stylesheet" type="text/css" href="../css/default_style.css">
   <link rel="stylesheet" type="text/css" href="../css/projectprofile.css">
+	<!--<link rel="stylesheet" type="text/css" href="../css/showcase.css">-->
+	<link rel="stylesheet" type="text/css" href="../css/lightbox.css">
 </head>
     
 <body>
@@ -17,33 +19,94 @@
     <div class="container">
       <div id="branding">
         <h1>Yufeng (Eric) Wu</h1>
+				<div id="topicons">
+					<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="/documents/icons/Instagram.png"></a>
+					<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="/documents/icons/Youtube.png"></a>
+					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
+					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
+					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				</div>
       </div>
+		</div>
+		<div class="container">	
       <nav>
         <ul>
           <li><a href="../index.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1--5kR4o6tvyb9kgonyveolyrORQ6wEy0/view?usp=sharing" target="blank">Resume</a></li>
-          <li class="current"><a href="projects.html">Projects</a></li>
-          <li><a href="../research/research.html">Research</a></li>
+          <li><a href="/Eric%20Yufeng%20Wu%20Resume.pdf" target="blank">Resume</a></li>
+          <li class="current"><a href="../projects/projects.html">Projects</a></li>
+          <!-- <li><a href="../research/research.html">Research</a></li> -->
           <li><a href="../art/art.html">Art &amp; Design</a></li>
           <li><a href="../cardistry.html">Cardistry</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  
+	
+	
+  <section id="showcase">
+		<div class="container">
+			<br>
+			<div class="prev_button">
+				<a class="prev_page" href="me84_hw3.html"><p>&lt;&lt; Prev: HW 3 - IoT Sculpture</p></a>
+			</div>
+			<div class="next_button">
+				<a class="next_page" href="me84_hw1.html"><p>Next: HW 1 - Animated Sculpture &gt;&gt;</p></a>
+			</div>
+		</div>
+		
+	
+		<div class="container">
+			<h2 class="centered">HW 2 - Haptic Feedback</h2>
+			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
+			<p class="date">Spring 2019</p>
+			<p class="main_content">This is a LEGO toy car with wireless joystick control. Bluetooth communication is set between two EV3 bricks. The haptic feedback of vibration is achieved by rotating an uneven weight at the center of the joystick. This robot was programmed in LabVIEW.</p>
+			
+			
+			
+			<br>
+			<div class="container">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/GXQaa7FW5z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			<br>
+			
+		</div>
 
+		
+		
+		
+		<div class="container">
+			<br>
+			<div class="prev_button">
+				<a class="prev_page" href="me84_hw3.html"><p>&lt;&lt; Prev: HW 3 - IoT Sculpture</p></a>
+			</div>
+			<div class="next_button">
+				<a class="next_page" href="me84_hw1.html"><p>Next: HW 1 - Animated Sculpture&gt;&gt;</p></a>
+			</div>
+		</div>
+		
+  </section>
+	
+	
 
-  
-  
+	
   
   <footer>
     <div class="container">
       <p class = contact>Contact Me:<br> yufeng.wu@tufts.edu</p>
+			<div id="icons">
+				<a href="https://www.instagram.com/eric_wuyufeng/?hl=en" target="blank"><img src="/documents/icons/Instagram.png"></a>
+				<a href="https://www.youtube.com/channel/UCSTgob4NNM6V9xhvlqdHFvA?view_as=subscriber" target="blank"><img src="/documents/icons/Youtube.png"></a>
+				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
+				<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
+				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+			</div>
     </div>
   </footer>
   
   
   <script type="text/javascript" src="../javascript/project.js"></script>
+	<script type="text/javascript" src="../javascript/content_slideshow.js"></script>
+	<script type="text/javascript" src="../javascript/lightbox.js"></script>
   
 </body>
     
