--- a/projects/me84_hw8.html
+++ b/projects/me84_hw8.html
@@ -56,7 +56,7 @@
 		
 	
 		<div class="container">
-			<h2 class="centered">HW 8 Autodrive</h2>
+			<h2 class="centered">HW 8 - Autodrive</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">Spring 2019</p>
 			<p class="main_content">Team: Eric Wu, Michael Carnavos.</p>
