--- a/projects/projects.html
+++ b/projects/projects.html
@@ -93,7 +93,7 @@
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="engineering_robot_head.html"><img src="../documents/projects/thumbnails/engineering_robot_head.jpg" alt="UR5 Arm System Head" class="thumbnail"></a>
+						<a href="engineering_robot_head.html"><img src="../documents/projects/thumbnails/engineering_robot_head.png" alt="UR5 Arm System Head" class="thumbnail"></a>
             <div class="title">
                 <p><a href="engineering_robot_head.html">UR5 Arm System Head</a></p>
             </div>
