--- a/projects/hexapod_h2.html
+++ b/projects/hexapod_h2.html
@@ -59,7 +59,7 @@
 			<h2 class="centered">Hexapod H2</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">July 2019 - August 2019</p>
-			<p class="main_content">This is version H2 of my open-source hexapod series - and the 4<sup>th</sup> one I've built overall. For more details on how I started all this and, go to the <a href="/projects/hexapod_prototypes.html" >prototypes</a> page.</p>
+			<p class="main_content">This is version H2 of my open-source hexapod series - and the 4<sup>th</sup> one I've built overall. For more details on how I started this "crazy heist", go to the <a href="/projects/hexapod_prototypes.html" >prototypes</a> page.</p>
 			<p class="main_content">One of the biggest improvents I made on H2 compared to <a href="/projects/hexapod_h1.html" >Version H1</a> is that I designed a hexagon-shape PCB that consists a servo driver (based on Adafruit's PCA9685 driver), power switches, battery ports, and pin headers to connect to the Feather Hazzah. </p>
 				<div class="row_lightbox">
 					<div class="column_lightbox">
