--- a/projects/me84_finalproj.html
+++ b/projects/me84_finalproj.html
@@ -25,6 +25,7 @@
 					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+					<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 				</div>
       </div>
 		</div>
@@ -149,6 +150,7 @@
 				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 				<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 			</div>
     </div>
   </footer>
