--- a/projects/engineering_iot_arms.html
+++ b/projects/engineering_iot_arms.html
@@ -25,6 +25,7 @@
 					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+					<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 				</div>
       </div>
 		</div>
@@ -172,10 +173,11 @@
 				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 				<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 			</div>
     </div>
   </footer>
-  
+	</section> 
   
   <script type="text/javascript" src="../javascript/project.js"></script>
 	<script type="text/javascript" src="../javascript/content_slideshow.js"></script>
