--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <a href="/projects/engineering_the_mighty_board.html"><img src="./documents/about/Featuring_5.JPEG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>The Mighty Board</h1>
-          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts several development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="/projects/engineering_the_mighty_board.html">Learn more</a></p>
+          <p class="showcasetext">I designed a "microcontrollers board" for a professor at Tufts University: A board that hosts ten development boards and makes testing and learning embedded system programming easier than ever.&nbsp<a class="showcaselink" href="/projects/engineering_the_mighty_board.html">Learn more</a></p>
         </div>
       </div> 
 
