--- a/projects/projects.html
+++ b/projects/projects.html
@@ -129,7 +129,7 @@
           <div class="itemprofile">
 						<a href="robotics_trinity_2018.html"><img src="../documents/projects/thumbnails/robotics_trinity_2018.jpg" alt="Trinity 2019" class="thumbnail"></a>
             <div class="title">
-                <p><a href="robotics_trinity_2018.html">UR5 Arm System Head</a></p>
+                <p><a href="robotics_trinity_2018.html">2018 Trinity Firefighter Robot</a></p>
             </div>
           </div> 
         </div>
